# racing_sim

./: CMakeLists.txt  README.md  package.xml
launch/: erp42_track_gazebo.launch  example.launch  one_robot.launch
models/track/: model.sdf
rviz/: example.rviz
scripts/: goforward.py  talker.py  talker2.py
urdf/: erp42_vehicle.urdf.xacro  example.urdf.xacro  example2.urdf.xacro  wheel.xacro
