<?xml version="1.0"?>
<package format="2">
  <name>racing_sim</name>
  <version>1.0.9</version>
  <description>
    Simulation for robot racing
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="luongtuan@g.skku.edu">Tuan Luong</maintainer>
  <url type="website">http://wiki.ros.org/velodyne_description</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
